<resources>
    <string name="app_name">Your PA</string>
    <string name="menu_home"> Pending Task</string>
    <string name="menu_dashboard">Completed Task</string>
    <string name="menu_notifications">Profile</string>
    <string name="task_list">Task List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemName">Banana</string>
    <string name="itemQuantity">35</string>
    <string name="itemPrice">250Rs</string>
    <string name="totalCost">20</string>
    <string name="totalCostTitle">Total Cost</string>
    <string name="title">Add Items to your cart</string>
    <string name="etItem">Item</string>
    <string name="etQuantity">Quantity</string>
    <string name="etPrice">Price</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="pendingTask">Pending Task</string>
    <string name="completedTask">Completed Task</string>
    <string name="add_task">To add task\n</string>
    <string name="add_task_title">Add Task</string>
    <string name="submit">Submit</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="login_activity">LoginActivity</string>
    <string name="only_for_me">Only for me</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
</resources>