<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.PandingTaskFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pendingTask"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@drawable/bg_top_selection"
        android:layout_margin="16dp">
        <TextView
            android:id="@+id/forMeTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/grey"
            android:padding="12dp"
            android:text="@string/offline"/>
        <TextView
            android:id="@+id/forEveryOneTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/online"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dbRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/note_item"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forAllRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/note_item"/>

</LinearLayout>